K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformsservice
  template:
    metadata:
      labels:
        app: platformsservice
    spec:
      containers:
        - name: platformsservice
          image: n17ali/platformsservice:latest
          imagePullPolicy: Never
          # inject the ConfigMap as environment variables
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformsservice
  ports:
    - name: platformsservice
      protocol: TCP
      port: 8080
      targetPort: 8080
