K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platforms-np-srv
spec:
  type: NodePort
  selector:
    app: platformsservice
  ports:
    - name: platformsservice
      protocol: TCP
      port: 8080
      targetPort: 8080
